syntax = "proto3";

package sheep;

service sheepService{
rpc getData(Location,Type,Number)returns (stream sheepResponse){}
}
message sheepRequest{
}

message sheepResponse{
string sheepType=1;
}
